tests/e2e/__tests__/bundle/tag-description-override-error/snapshot.txt
[1] main.yaml:17:5 at #/tags/0

Failed to read markdown override file for tag "pet".
ENOENT: no such file or directory, open './tests/e2e/__tests__/bundle/tag-description-override-error/non-existing.md'

15 |     email: email@redocly.com
16 | tags:
17 |   - name: pet
   |     ^^^^^^^^^
18 |     description: Everything about your Pets
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 |   - name: store
20 |     description: Access to Petstore orders

Error was generated by the tag-description-override rule.



bundling main.yaml using configuration for api 'main'...
❌ Errors encountered while bundling main.yaml: bundle not created (use --force to ignore errors).
